--- a/desafio.html
+++ b/desafio.html
@@ -95,6 +95,8 @@
     <p>ativa e oportunidades de conexão com o mercado de trabalho.</p>
     <br><br>
 
+<h2 id="DIO"><a href="https://www.dio.me">Conheça a DIO</a></h2>
+
 </body>
 </html>
 
